force-app/main/default/objects/Account/fields/AC_Security_Questions__c.field-meta.xml
<CustomField>
    <fullName>AC_Security_Questions__c</fullName>
    <description>List Updated in May again</description>
    <label>AC Security Questions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 Security Questions</fullName>
            </value>
            <value>
                <fullName>2 Additional Security Questions</fullName>
            </value>
            <value>
                <fullName>3 Security Questions + 2 Enhanced</fullName>
            </value>
            <value>
                <fullName>Authentication not required</fullName>
                <isActive>false</isActive>
                <label>Authentication not required</label>
            </value>
            <value>
                <fullName>OnFido Digital ID Verification</fullName>
                <isActive>false</isActive>
                <label>OnFido Digital ID Verification</label>
            </value>
            <value>
                <fullName>Other - See CRM interactions</fullName>
                <isActive>false</isActive>
                <label>Other - See CRM interactions</label>
            </value>
            <value>
                <fullName>PAC authenticate + 2 Security Questions</fullName>
                <isActive>false</isActive>
                <label>PAC authenticate + 2 Security Questions</label>
            </value>
            <value>
                <fullName>PAC authenticated</fullName>
                <isActive>false</isActive>
                <label>PAC authenticated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>