force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <formula>IMAGE(&apos;/resource/nCinoLogo&apos;, &quot;nCino Logo&quot;, 40, 104)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type TEST UPDATE</label>
    <type>Text</type>
</CustomField>