force-app/main/default/objects/Account/fields/AML_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>AML_Expiry_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AML Expiry Date</label>
    <type>Date</type>
</CustomField>