force-app/main/default/objects/Account/fields/Banking_ID__c.field-meta.xml
<CustomField>
    <fullName>Banking_ID__c</fullName>
    <description>Data Migration - CRM 349</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <externalId>true</externalId>
    <label>Banking ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>