force-app/main/default/objects/Account/fields/Birthday_BDT__c.field-meta.xml
<CustomField>
    <fullName>Birthday_BDT__c</fullName>
    <description>Field is updated from the Business Discovery Tool object</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Birthday (BDT)</label>
    <type>Date</type>
</CustomField>