force-app/main/default/objects/Account/fields/BRR_Scorecard_Used__c.field-meta.xml
<CustomField>
    <fullName>BRR_Scorecard_Used__c</fullName>
    <description>CRM-4364</description>
    <label>BRR Scorecard Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Income Producing</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>General Commercial</fullName>
            </value>
            <value>
                <fullName>Behavioural Review</fullName>
            </value>
            <value>
                <fullName>Commercial and Industrial</fullName>
                <isActive>false</isActive>
                <label>Commercial and Industrial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>