force-app/main/default/objects/Account/fields/Business_Org_Structure__c.field-meta.xml
<CustomField>
    <fullName>Business_Org_Structure__c</fullName>
    <description>Picklist defining Business org structure. Controlling field for Business org type. Values supplied by T-24. CRM-349</description>
    <label>Business Org Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Org_Structure</valueSetName>
    </valueSet>
</CustomField>