force-app/main/default/objects/Account/fields/Business_Org_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Org_Type__c</fullName>
    <description>List of Business/Org Types. Dependent on Business/Org Structure picklist. Values supplied by T-24 Integration. CRM-349</description>
    <label>Business/Org Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Org_Structure__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Business_Org_Type</valueSetName>
    </valueSet>
</CustomField>