force-app/main/default/objects/Account/fields/Business_Since__c.field-meta.xml
<CustomField>
    <fullName>Business_Since__c</fullName>
    <description>Data Migration</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please ensure T24 is correct and updated.</inlineHelpText>
    <label>Business Since</label>
    <type>Date</type>
</CustomField>