force-app/main/default/objects/Account/fields/ByPassMemberAuth__c.field-meta.xml
<CustomField>
    <fullName>ByPassMemberAuth__c</fullName>
    <formula>IF(  ISBLANK(Other_Financial_Institution__c), false,  CONTAINS(  $Label.MemberAuthBypassValues ,  Other_Financial_Institution__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ByPassMemberAuth</label>
    <type>Checkbox</type>
</CustomField>