force-app/main/default/objects/Account/fields/CANNEX_Confirmation_Required__c.field-meta.xml
<CustomField>
    <fullName>CANNEX_Confirmation_Required__c</fullName>
    <description>Agency Web 2.0</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CANNEX Confirmation Required</label>
    <length>40</length>
    <type>Text</type>
</CustomField>