force-app/main/default/objects/Account/fields/Classification_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Classification_Change_Reason__c</fullName>
    <description>CRM-5813 - If the Classification is changed, a reason is required.</description>
    <label>Classification Change Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marital Status</fullName>
            </value>
            <value>
                <fullName>Change in Assets</fullName>
            </value>
            <value>
                <fullName>Death</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Change of Household - Death</fullName>
                <isActive>false</isActive>
                <label>Change of Household - Death</label>
            </value>
            <value>
                <fullName>Change of Household - Divorce</fullName>
                <isActive>false</isActive>
                <label>Change of Household - Divorce</label>
            </value>
            <value>
                <fullName>Change of Household - Other</fullName>
                <isActive>false</isActive>
                <label>Change of Household - Other</label>
            </value>
            <value>
                <fullName>Change of Household - Separation</fullName>
                <isActive>false</isActive>
                <label>Change of Household - Separation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>