force-app/main/default/objects/Account/fields/Classification_Change_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>Classification_Change_Reason_Other__c</fullName>
    <description>CRM-5813 - If Classification Change Reason Other, this field needs to be populated.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Classification Change Reason (Other)</label>
    <type>TextArea</type>
</CustomField>