force-app/main/default/objects/Account/fields/Commercial_RM__c.field-meta.xml
<CustomField>
    <fullName>Commercial_RM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Commercial RM</label>
    <length>80</length>
    <type>Text</type>
</CustomField>