force-app/main/default/objects/Account/fields/CommRM_LastCompletedActivity__c.field-meta.xml
<CustomField>
    <fullName>CommRM_LastCompletedActivity__c</fullName>
    <description>When a task is completed by a Commercial RM, this field captures the datetime.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Commercial Last Touched</label>
    <type>DateTime</type>
</CustomField>