force-app/main/default/objects/Account/fields/Consent_to_Electronic_Delivery_of_Docume__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_Electronic_Delivery_of_Docume__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent to EDD</label>
    <type>Checkbox</type>
</CustomField>