force-app/main/default/objects/Account/fields/Consent_to_General_Email_Communication__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_General_Email_Communication__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Consent to general email communication is not required if the member has provided their consent to electronic delivery of documents</inlineHelpText>
    <label>Consent to General Email Communication</label>
    <type>Checkbox</type>
</CustomField>