force-app/main/default/objects/Account/fields/ConvertedByBranch__c.field-meta.xml
<CustomField>
    <fullName>ConvertedByBranch__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Converted By Branch</label>
    <type>TextArea</type>
</CustomField>