force-app/main/default/objects/Account/fields/ConvertedByDivision__c.field-meta.xml
<CustomField>
    <fullName>ConvertedByDivision__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Converted By Division</label>
    <type>TextArea</type>
</CustomField>