force-app/main/default/objects/Account/fields/ConvertedByName__c.field-meta.xml
<CustomField>
    <fullName>ConvertedByName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Converted By Name</label>
    <type>TextArea</type>
</CustomField>