force-app/main/default/objects/Account/fields/ConvertedByRegion__c.field-meta.xml
<CustomField>
    <fullName>ConvertedByRegion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Converted By Region</label>
    <type>TextArea</type>
</CustomField>