force-app/main/default/objects/Account/fields/ConvertedByRole__c.field-meta.xml
<CustomField>
    <fullName>ConvertedByRole__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Converted By Role</label>
    <type>TextArea</type>
</CustomField>