force-app/main/default/objects/Account/fields/ConvertedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ConvertedDateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Converted DateTime</label>
    <type>DateTime</type>
</CustomField>