force-app/main/default/objects/Account/fields/CreatedByBranch__c.field-meta.xml
<CustomField>
    <fullName>CreatedByBranch__c</fullName>
    <description>Created By Branch</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please input the Branch name the Prospect record was created at.</inlineHelpText>
    <label>Created By Branch</label>
    <type>TextArea</type>
</CustomField>