force-app/main/default/objects/Account/fields/CreatedByDivision__c.field-meta.xml
<CustomField>
    <fullName>CreatedByDivision__c</fullName>
    <description>Created By Division</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please input the Line of Business the Prospect originated from.</inlineHelpText>
    <label>Created By Division</label>
    <type>TextArea</type>
</CustomField>