force-app/main/default/objects/Account/fields/CreatedByName__c.field-meta.xml
<CustomField>
    <fullName>CreatedByName__c</fullName>
    <description>CRM-1536 - Captured the Username of the Prospect who created the record.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CreatedBy Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>