force-app/main/default/objects/Account/fields/CreatedByRegion__c.field-meta.xml
<CustomField>
    <fullName>CreatedByRegion__c</fullName>
    <description>Created By Region</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please input which Region the Prospect originated from.</inlineHelpText>
    <label>Created By Region</label>
    <type>TextArea</type>
</CustomField>