force-app/main/default/objects/Account/fields/CreatedByRole__c.field-meta.xml
<CustomField>
    <fullName>CreatedByRole__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Created By Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>