force-app/main/default/objects/Account/fields/CreatedByUserProfileName__c.field-meta.xml
<CustomField>
    <fullName>CreatedByUserProfileName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CreatedByUserProfileName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>