force-app/main/default/objects/Account/fields/CreatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateTime__c</fullName>
    <description>CRM-1536 - Captures the DateTime the Prospect record is first created. This is captured via the Account PB.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Created DateTime</label>
    <type>DateTime</type>
</CustomField>