force-app/main/default/objects/Account/fields/CRM_ID_AutoNumber__c.field-meta.xml
<CustomField>
    <fullName>CRM_ID_AutoNumber__c</fullName>
    <label>CRM ID AutoNumber</label>
    <type>AutoNumber</type>
</CustomField>