force-app/main/default/objects/Account/fields/Date_of_Birth_Formula__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth_Formula__c</fullName>
    <formula>Date_of_Birth__pc</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>