force-app/main/default/objects/Account/fields/DMC_Invited_By__c.field-meta.xml
<CustomField>
    <fullName>DMC_Invited_By__c</fullName>
    <description>CRM4300 Field to identify the user that sent a DMC invitation to the member to complete the DMC in self serve channel.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DMC Invited By</label>
    <length>200</length>
    <type>Text</type>
</CustomField>