force-app/main/default/objects/Account/fields/DMC_Invited_Date__c.field-meta.xml
<CustomField>
    <fullName>DMC_Invited_Date__c</fullName>
    <description>CRM4300</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DMC Invited Date</label>
    <type>Date</type>
</CustomField>