force-app/main/default/objects/Account/fields/EDD_Last_Modified_Datetime__c.field-meta.xml
<CustomField>
    <fullName>EDD_Last_Modified_Datetime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EDD Last Modified Datetime</label>
    <type>DateTime</type>
</CustomField>