force-app/main/default/objects/Account/fields/Equity_at_Risk__c.field-meta.xml
<CustomField>
    <fullName>Equity_at_Risk__c</fullName>
    <description>CRM-4979</description>
    <label>Equity at Risk</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>