force-app/main/default/objects/Account/fields/Errors_and_Omissions_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Errors_and_Omissions_Expiry_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Errors and Omissions Expiry Date</label>
    <type>Date</type>
</CustomField>