force-app/main/default/objects/Account/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Spouse, Children, Grandchildren, Pets, Health Issues, Special Situations</inlineHelpText>
    <label>Family</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>