force-app/main/default/objects/Account/fields/FinServ__ClientCategory__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ClientCategory__c</fullName>
    <inlineHelpText>DMR Seg 1 - Bus Signer with No Retail Relationship // 
DMR Seg 2 - Self Employed with No Bus Relationship // 
DMR Seg 3 - Member with MTG &amp; No Investments // 
DMR Seg 4 - Bus Signer with Retail Relationship // DMR Seg 5 - Member with MTG &amp; Investments</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>