force-app/main/default/objects/Account/fields/FinServ__LastInteraction__c.field-meta.xml
<CustomField>
    <fullName>FinServ__LastInteraction__c</fullName>
    <description>Date of the last client meeting or call.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Interaction</label>
    <type>Date</type>
</CustomField>